# LedScreenAlgorithm

./: CMakeLists.txt  LICENSE  Makefile  README.md  ledsim
doc/: 开发笔记.txt  开发说明.txt
src/App/: Config.h  Includes.h  Main.c  Typedef.h
src/Display/: LedAct.c  LedAct.h  LedEffect.c  LedEffect.h  LedProcess.c  LedProcess.h
src/Effects/: EffectDown.c  EffectDown.h  EffectFixed.c  EffectFixed.h  EffectLaser.c  EffectLaser.h  EffectLeft.c  EffectLeft.h  EffectRight.c  EffectRight.h  EffectScroll.c  EffectScroll.h  EffectSnow.c  EffectSnow.h  EffectUp.c  EffectUp.h
src/Simulator/: Simulator.c  Simulator.h
